--- a/src/nametag/Nametag.css
+++ b/src/nametag/Nametag.css
@@ -2,9 +2,31 @@
   display: flex;
   flex: 1;
   flex-direction: column;
-  background-color: red;
-  color: white;
   justify-content: center;
   margin: 20px;
   border-radius: 10px;
+  overflow: hidden;
+  box-shadow: -4px 4px 4px rgba(0,0,0,0.5);
+  background-color: red;
+}
+
+.heading {
+  justify-content: center;
+  color: white;
+  display: flex;
+  flex-direction: column;
+}
+
+.name {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  background-color: #FFF;
+  margin-bottom: 50px;
+  justify-content: center;
+}
+
+h3 {
+  font-weight: bold;
+  font-family: "Comic Sans MS", cursive, sans-serif;
 }
