--- a/src/components/nametag/Nametag.css
+++ b/src/components/nametag/Nametag.css
@@ -26,7 +26,35 @@
   justify-content: center;
 }
 
+h1 {
+  font-size: 5em;
+  line-height: 1em;
+  margin: 10px 0 0 0;
+}
+
+h2{
+  line-height: 1em;
+  font-size: 2em;
+  margin: 0 0 10px 0;
+}
+
 h3 {
   font-weight: bold;
   font-family: "Comic Sans MS", cursive, sans-serif;
+  font-size: 3em;
+}
+
+form > input {
+  font-size: 3em;
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-weight: bold;
+  border: none;
+  text-align: center;
+}
+
+.copyright {
+  display: flex;
+  align-self: flex-end;
+  padding-right: 20px;
+  color: white; 
 }
