--- a/src/components/optionsmenu/OptionsMenu.css
+++ b/src/components/optionsmenu/OptionsMenu.css
@@ -13,9 +13,10 @@
 
 .options-menu-modal {
   display: flex;
-  background-color: #555;
   border-radius: 5px;
   position: relative;
+  padding: 30px;
+  background-color: #333;
 }
 
 .options-menu-modal > form {
