--- a/src/components/nametag/Nametag.css
+++ b/src/components/nametag/Nametag.css
@@ -32,6 +32,7 @@
   right: 0;
   top: 0;
   margin: 10px;
+  z-index: 1;
   display: inline-block;
   background-color: transparent;
   border: none;
